--- a/abstract.tex
+++ b/abstract.tex
@@ -1,17 +1,19 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
-Robot localization in known environments is an important topic. Often it can be of great importance that a robot finds its position (or even its full pose) very quickly.
+Robot localization in known environments is an important topic: Often it can be of great importance that a robot finds its position (or even its full pose) very quickly.
 
-A common approach to this is to use some kind of Monte-Carlo or Markov localization in a discretized 2D-map, e.g. by the use of a laser scanner. To illustrate this imagine a robot getting sensor information about walls and corners around him, maybe a door as well, which helps it to determine his current position. More technically the classical Markov 2D algorithm divides the map into discrete cells which get assigned with equal probabilities. Those prior probabilities get updated according to the robot's sensory input until they converge to a specific cell. This approach however has some problems, one example is that there might be ambiguous positions. The same problem applies to the Monte-Carlo approach, which already removes the discretized space and instead samples into the 3D map.
+A common approach to this is to use some kind of Monte Carlo or Markov localization in a 2D-map, e.g. by the use of a laser scanner. To illustrate this, imagine a robot getting sensor information about walls and corners around him, maybe a door as well, which helps it to determine his current position. More technically the classical Markov 2D algorithm divides the map into discrete cells which get assigned with equal probabilities. Those prior probabilities get updated according to the robot's sensory input until they converge to a specific cell. The traditional Monte Carlo approach improves this behavior by implementing a particle filter which is no longer dependent on a discrete cell structure. Both approaches however have some problems, one example is that there might be ambiguous positions.
 
 \bigskip
 
-This thesis will try to improve the probabilistic localization approach by using ray-tracing from sampled positions in a 3D map and comparing the scan to the results. This should lead to a quick convergence of the positional assumptions towards the real position, in the ideal case. If the approach works promising it might get extended by the use of an additional laser scanner (directed differently, e.g. upwards) to make use of the full 3D information. Although this introduces more complexity the localization should work even faster in that case, since the robot has more landmarks to compare.
+This thesis will try to improve and extend the Monte Carlo localization method by using ray tracing from sampled positions in a 3D polygon map and comparing the robot's information to the simulation results. This should lead to a quick convergence of the positional assumptions towards the real position, in the ideal case. By using a 3D map there should be less ambiguous positions during the localization step.
 
+\todo{work on this section}
 I will first derive the 3D algorithm, set up example scenarios and compare the traditional 2D algorithm's performance to it. Comparability of the two algorithms is given because they will both first work with one laser scan, what makes them similar -- the only difference is the map. This difference gets negligible since the 3D algorithm will just use one layer, just as the 2D one.
 
 \bigskip
 
+\todo{this is partly wrong}
 Although they are comparable, the 3D algorithm will work slightly different. Instead of using a cellular environment the robot will sample positions (maybe even poses) into the map and assign those with equal probabilities. Each sample's probability will then be updated according to the sensory input and a comparison with the 3D map. If a sample's probability falls below a certain threshold it gets reseeded: over time most samples should be around the most probable positions. However, a certain percentage of samples should be kept away from those positions in case the sample was a false positive and the robot needs to quickly readjust its probabilities -- it then has some back-up starting points, just like the traditional 2D variant does it.
 
 After setting up the 3D algorithm and modeling an example scenario, the two methods will be tested. The two algorithms will be compared by space complexity and run time. The former is important to check whether the algorithms are suitable for robots with limited resources and the latter to see which algorithm is faster and therefor more useful in real world applications. 
