--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,5 +1,10 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
+Prof. Hertzberg
+Thomas: advices, support, etc.
+Jochen: Technical support
+Kai: substitute, mathematics
 
-
+editors/readers:(?)
+Valentin, Andrea, Lisa
 \end{document}
