--- a/idea.tex
+++ b/idea.tex
@@ -1,7 +1,7 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
 
-\chapter{}
-\section{}
+\chapter{Idea}
+\section{Section}
 
 \end{document}
