--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -1,1 +1,3 @@
 \newacronym{iid}{i.i.d.}{independent and identically distributed}
+\newacronym{SLAM}{SLAM}{Simultaneous Localization and Mapping}
+\newacronym{pdf}{pdf}{probability density function}
