--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -19,7 +19,7 @@
   publisher = "Springer",
   series    = "{Statistics and Computing}",
   title     = "{Random Number Generation and Monte Carlo Methods}",
-  year      = "2005"
+  year      = "2005",
 }
 
 @inproceedings{Smithers:1994,
@@ -29,7 +29,7 @@
   pages        = "64--72",
   year         = "1994",
   organization = "MIT Press",
-  publisher    = "D. Cliff et al."
+  publisher    = "D. Cliff et al.",
 }
   
 @incollection{gfxgems:1995,
@@ -49,5 +49,5 @@
   author       = "RoboCup",
   title        = "{Robot World Cup Soccer Games and Conferences}",
   howpublished = {\url{http://www.robocup.org}},
-  year         = "2008"
+  year         = "2008",
 }
