--- a/Thesis.tex
+++ b/Thesis.tex
@@ -6,7 +6,7 @@
 % - use option "alpha" for abbreviated citation (instead of numbers)
 % - option "draft" is available, too
 % - use options "utf8" or "latin1" to select inputencoding
-\documentclass[english, bachelor, utf8, alpha]{base/thesis_KBS}
+\documentclass[english, bachelor, utf8]{base/thesis_KBS}
 
 \usepackage{units}    % useful for settings units:              \unit[23]{m}
 %\usepackage{nicefrac} % for setting fractions esp. within text: \nicefrac{km}{h}
@@ -24,8 +24,10 @@
 \usepackage[acronym, nonumberlist, nomain]{glossaries}
 \makeglossaries
 \loadglsentries{glossary_and_acronyms}
-\usepackage{makeidx}
-\makeindex
+
+\newcommand{\p}[3][p]{\ensuremath{#1\!\left({#2}\middle|{#3}\right)}}
+%\usepackage{makeidx}
+%\makeindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
@@ -61,11 +63,9 @@
 
 \subfile{introduction}
 
-%\subfile{history}
-
 %\subfile{stateoftheart}
 
-%\subfile{idea}
+\subfile{idea}
 
 % robot, given software, etc.
 \subfile{setup}
@@ -78,7 +78,7 @@
 % implementation details, combine with algorithm?
 %\subfile{implementation}
 
-% runtests
+% runtests - throw away?
 %\subfile{tests}
 
 %\subfile{evaluation}
@@ -95,8 +95,8 @@
 \cleardoublepage
 \bibliography{thesis_bibliography}
 
-\cleardoublepage
-\printindex
+%\cleardoublepage
+%\printindex
 
 \cleardoublepage
 %% declaration of authorship
