--- a/algorithm.tex
+++ b/algorithm.tex
@@ -6,10 +6,12 @@
 \section{The algorithm}
 
 \begin{algorithm}
+\label{alg:amcl6d}
+\caption{AMCL6D}
 \SetKwFunction{mm}{motion\textunderscore model}
 \SetKwFunction{sm}{sensor\textunderscore model}
 \SetKwFunction{kd}{prepare\textunderscore kd\textunderscore tree}
-\SetKwFunction{knn}{KNN}
+\SetKwFunction{ev}{evaluation}
 \SetKwFunction{sort}{sort}
 
 \SetKwProg{amcl}{AMCL6D}{}{end}
@@ -24,10 +26,10 @@ $k_t$ = \kd{$m_{t}$}
 
 $X_t$ = $X_{t-1}$\;
 \tcc{Update motion and sensor model}
-\For{$\forall x \in X_{t}$}{
+\For{$\forall x \in X_{t}$}{ 
   $x.pose$ = \mm{$x.pose, u_{t}$}\;
   $x.raytrace$ = \sm{$x$}\;
-  $x.likelihood$ = \knn{$k_t, x.raytrace$}\;
+  $x.likelihood$ = \ev{$k_t, x.raytrace$}\;
 }
 
 \BlankLine
