--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,10 +1,8 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
-Prof. Hertzberg
-Thomas: advices, support, etc.
-Jochen: Technical support
-Kai: substitute, mathematics
+I give thanks to Prof. Dr. Hertzberg and the people of the working group Knowledge Based Systems for their overall support with my thesis.
 
-editors/readers:(?)
-Valentin, Andrea, Lisa
+Particularly I would like to thank Dr. Thomas Wiemann for his great advice and support. His reviews, critiques and ideas helped me a lot tackling the topic and solving the problems I had to overcome while developing the algorithm.
+
+Additionally many thanks to Lisa Goerke for reading through my thesis and providing lots of valuable feedback and remarks.
 \end{document}
