--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -1,4 +1,5 @@
 \newacronym{iid}{i.i.d.}{independent and identically distributed}
 \newacronym{SLAM}{SLAM}{Simultaneous Localization and Mapping}
+\newacronym{AMCL}{AMCL}{Augmented Monte Carlo Localization}
 \newacronym{pdf}{pdf}{probability density function}
 \newacronym{cdf}{cdf}{cumulative distribution functions}
