--- a/sample_generation_and_modification.tex
+++ b/sample_generation_and_modification.tex
@@ -44,7 +44,7 @@ q = \left( \sin{2\pi X_1}\sqrt{1-X_0},\: \cos{2\pi X_1}\sqrt{1-X_0},\:
 %\Return{q($s_1r_1, c_1r_1, s_2r_2, c_2r_2$)}
 %\end{algorithm}
 
-The generated vector $v$ and the orientation quaternion $q$ form the sampled robot pose.
+The generated vector $v$ and the orientation quaternion $q$ form the sampled robot pose. Initially all poses get the same probability: $\nicefrac{1}{n}$, where $n$ is the number of samples.
 
 \subsection{Updating samples}
 
