--- a/setup.tex
+++ b/setup.tex
@@ -5,6 +5,8 @@
 	\item Kurt, kinematics, kinect camera/laser scanner,
   \item ROS Hydro (released 2013)
   \item Las Vegas Reconstruction Kit
+  \item CGAL Raytracer
+  \item Ubuntu 12.04 
 \end{itemize}
 
 
