--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -1,11 +1,14 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
 
-\chapter{State of the Art}
-%\section{}
-\begin{itemize}
-	\item amcl - grid based/sample based
-\end{itemize}
+\chapter{State of the art}
+\section{Augmented Monte Carlo Localization in two dimensions}
+
+\subsection{Grids and samples}
+
+\section{Motion model}
+
+\section{Sensor model}
 
 
 \end{document}
